# cosmitos-imperiales

./: .gitignore  README.md  database_setup.sql  pyproject.toml
Model/: data_manager.ipynb  model.ipynb
csv_s/: comentarios_completo.csv  comentarios_irrelevantes.csv  comentarios_limpios.csv  limpieza_csv.ipynb  unir_excel.ipynb
csv_s/datos_crudos/: c_Abril_2025 - copia.xlsx  c_Abril_2025.xlsx  c_Febrero_2025.xlsx
datos_analizados/: c_Abril_2025_limpio.csv  c_Mayo_2025_limpio.csv
datos_excel/: c_Enero_2025.xlsx  c_Junio_2025.xlsx  c_Marzo_2025.xlsx  c_Mayo_2025.xlsx  comentarios_sin_duplicados.csv
gssp/: package-lock.json  package.json  setup.py
gssp/src/: clasificador_sentimiento_final.pkl
gssp/src/main/: README_CARGA_ARCHIVOS.md  main.js
notebooks/: limpieza_csv.ipynb  t_sne.ipynb  unir_excel.ipynb
src/domain/entities/: review.py
src/domain/exceptions/: exceptions.py
src/domain/services/: text_cleaner.py
src/domain/value_objects/: sentiment.py
src/main/: app.py  config.py
src/main/adapters/: data_cleaner_adapter.py  sentiment_analyzer_adapter.py
src/main/datos/: GuardarDatosArchivo.py
src/main/infrastructure/: config.py  dependency_injection_container.py
src/main/negocio/: ServicioAlmacenamiento.py  ServicioAnalisisEvaluacion.py  ServicioDescargaPDF.py  ServicioLimpiarDatos.py  ServicioValidarArchivo.py  sugerencias.py
src/main/use_cases/: list_analyses_use_case.py  load_analysis_use_case.py  (+1 more)
tests/: Pruebas-Unitarias-README.md  test_almacenamiento.py  test_analisis_evaluacion.py  test_streamlit_app.py  test_streamlit_components.py
(+45 files in other folders)
